Change ping alert to just 'Ping'.

--- a/stacksy/app/views/pings/create.js.haml
+++ b/stacksy/app/views/pings/create.js.haml
@@ -1,5 +1,5 @@
 - if @ping.persisted?
-  var alertHtml = "Ping sent to #{escape_javascript(@ping.pinged.name)}. Sweet!"
+  var alertHtml = "Ping!"
 - else
   var alertHtml = "Ping not sent. #{escape_javascript(@ping.errors.full_messages.join(", "))}. Not sweet.<br>Please try again--love waits for no person!"
 
