Remove cruft facebook js from layouts and if current_user condition from application layout.

--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -112,6 +112,10 @@ h3, #js-alert {
   color: #FF5C97;
 }
 
+.user-display {
+  width: 600px;
+}
+
 .col-md-8 {
   text-align: center;
   //background-color: #DFF8EE;
