--- a/stacksy/app/views/users/home.html.haml
+++ b/stacksy/app/views/users/home.html.haml
@@ -1,23 +1,26 @@
 #news_feed
   -@users.each do |user|
-    = link_to image_tag(user.profile.image_1, class: "circular_small"), profile_path(user)
-    = link_to user.name, profile_path(user)
-    = user.gender.title
-    = user.location
-    = user.age
-    .communication
-      .ping-button       
-        = link_to "Ping", create_ping_path(pinged_id: user.id), method: :post, remote: true, class: 'btn btn-warning'
-      .message-button
-        = link_to "Message", 'javascript:;', class: 'btn btn-success'
-        // Message button made a link so as to be sized similarly to ping button.
-      .message-box
-        = form_tag create_message_path(recipient_id: user.id), remote: true do
-          = fields_for :message do |i|
-            %br
-            = i.text_area :content, cols: '50', rows: '5'
-          %br
-          = submit_tag "Send", class: 'send-button btn btn-success'
+    .user-display.center-block
+      .text-left
+        = link_to image_tag(user.profile.image_1, class: "circular_small"), profile_path(user)
+        = link_to user.name, profile_path(user)
+        = user.gender.title
+        = user.location
+        = user.age
+      .text-right
+        .communication
+          .ping-button       
+            = link_to "Ping", create_ping_path(pinged_id: user.id), method: :post, remote: true, class: 'btn btn-warning'
+          .message-button
+            = link_to "Message", 'javascript:;', class: 'btn btn-success'
+            // Message button made a link so as to be sized similarly to ping button.
+          .message-box
+            = form_tag create_message_path(recipient_id: user.id), remote: true do
+              = fields_for :message do |i|
+                %br
+                = i.text_area :content, cols: '50', rows: '5'
+              %br
+              = submit_tag "Send", class: 'send-button btn btn-success'
       
     %br
 
