Removed extraneous files

--- a/stacksy/app/views/users/search.html.haml
+++ b/stacksy/app/views/users/search.html.haml
@@ -9,10 +9,10 @@
   %br
   = f.label "Maximum Age"
   = f.number_field :birthday_gteq 
+  #slider
+  
   = f.submit "Search"
   
-
-
 %body
   %header
     -@users.each do |user|
