--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -7,6 +7,9 @@
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Libre+Baskerville:400italic"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    %link{href: "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css", rel: "stylesheet"}
+    %script{src: "http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"}
+    %script{src: "http://code.jquery.com/ui/1.10.3/jquery-ui.js"}
   %body
     #fb-root
       :javascript
