--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -36,18 +36,21 @@
                 = link_to "Membership", user_membership_path(current_user)
                 %br
                 = link_to "Log Out", destroy_user_session_path, method: :delete
-
             %li#menu_item_home
-              = link_to 'Home', home_page_based_on_role, class: '.btn btn-butter'
+              = link_to 'Home', home_page_based_on_role, class: 'btn btn-butter'
             %li#menu_item_search
-              = link_to 'Search', user_search_path(current_user), class: '.btn btn-butter'
+              = link_to 'Search', user_search_path(current_user), class: 'btn btn-butter'
             %li#menu_item_messages
-              = link_to 'Messages', user_messages_path(current_user), class: '.btn btn-butter'
+              = link_to(user_messages_path(current_user), class: 'btn btn-butter') do
+                Messages
+                %span.badge.pull-right 89
             %li#menu_item_pings
-              = link_to 'Pings', user_pings_path(current_user), class: '.btn btn-butter'
+              = link_to(user_pings_path(current_user), class: 'btn btn-butter') do
+                Pings
+                %span.badge.pull-right 17
             %li#menu_item_tracker
-              = link_to 'Tracker', tracker_index_path(current_user), class: '.btn btn-butter'
+              = link_to 'Tracker', tracker_index_path(current_user), class: 'btn btn-butter'
             %li#menu_item_tracked
-              = link_to 'Tracked', tracked_index_path(current_user), class: '.btn btn-butter'
+              = link_to 'Tracked', tracked_index_path(current_user), class: 'btn btn-butter'
             %li#menu_item_blocks
-              = link_to 'Blocks', user_blocks_path(current_user), class: '.btn btn-butter'
+              = link_to 'Blocks', user_blocks_path(current_user), class: 'btn btn-butter'
