--- a/stacksy/app/views/users/search.html.haml
+++ b/stacksy/app/views/users/search.html.haml
@@ -4,15 +4,13 @@
   = f.label "Gender"
   = f.select :gender_title_eq, options_from_collection_for_select(Gender.all, "title", "title"), include_blank: true
   %br
-  = f.label "Minimum Age"
-  = f.number_field :birthday_lteq
-  %br
-  = f.label "Maximum Age"
-  = f.number_field :birthday_gteq 
+  %p Age Range
+  %input#amount
   #slider
-  
+  = f.hidden_field :birthday_lteq
+  = f.hidden_field :birthday_gteq
   = f.submit "Search"
-  
+
 %body
   %header
     -@users.each do |user|
