--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -43,7 +43,9 @@
             %li#menu_item_messages
               = link_to(user_messages_path(current_user), class: 'btn btn-butter') do
                 Messages
-                %span.badge.pull-right 89
+                - if current_user.unviewed_messages.any?
+                  %span.badge.pull-right
+                    = current_user.unviewed_messages.count
             %li#menu_item_pings
               = link_to(user_pings_path(current_user), class: 'btn btn-butter') do
                 Pings
