Geocoding search working, but updating location geocoded by

--- a/stacksy/app/views/users/search.html.haml
+++ b/stacksy/app/views/users/search.html.haml
@@ -9,6 +9,9 @@
   #slider
   = f.hidden_field :birthday_lteq
   = f.hidden_field :birthday_gteq
+  %br
+  %p Distance From You
+  = f.number_field :distance
   = f.submit "Search"
 
 %body
