Added scopes to find people who have matching gender interests as you

--- a/stacksy/app/views/users/gender_zipcode.html.haml
+++ b/stacksy/app/views/users/gender_zipcode.html.haml
@@ -10,7 +10,7 @@
     = check_box_tag 'user[gender_interest_ids][]', gender.id, @user.gender_interest_ids.include?(gender.id)
     = label_tag gender.title
   %br
-  %p Zip Code
+  %p Postal Code
   = f.text_field :zipcode
   %br
   = f.submit
