--- a/stacksy/app/views/users/membership.html.haml
+++ b/stacksy/app/views/users/membership.html.haml
@@ -1,8 +1,8 @@
 
 
-%p You are a #{membership_status} Member.
+%h2 You are a #{membership_status} Member.
 
-%p Chose Your Membership Plan
+#membership-line Chose Your Membership Plan
 
 #payment_options
   = form_for @user do |f|
