--- a/stacksy/app/views/users/membership.html.haml
+++ b/stacksy/app/views/users/membership.html.haml
@@ -1,6 +1,6 @@
 
 
-%h2 You are a #{membership_status} Member.
+%h2 You are #{membership_status} Member.
 
 #membership-line Chose Your Membership Plan
 
