Increased bottom margin on h1 tag.

--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -86,11 +86,8 @@ a:hover#facebook_log_in_button{
 h1 {
   font-size: 150px;
   font-family: 'Pacifico', cursive;
-
-}
-
-h1 {
-  color: #FF6000; 
+  color: #FF6000;
+  margin-bottom: 70px;
 }
 
 h2 {
