--- a/stacksy/app/views/profiles/edit.html.haml
+++ b/stacksy/app/views/profiles/edit.html.haml
@@ -1,25 +1,18 @@
 %h2 Edit Your Profile
-= form_for @profile do |f|
-  = f.label :industry
-  = f.select :industry, options_for_select(["Tech", "Analytics", "Design", "Web Development", "Digital Media", "Gaming", "IT Support", "Mobile Development", "Telecoms"])
-  = f.label :occupation
-  = f.text_field :occupation
-  = f.label "Why tech?"
-  = f.text_area :why_tech
-  = f.label :stack
-  = f.text_area :stack
-  = f.label "Favorite Characters"
-  = f.text_area :fav_characters
-  = f.label "Local Spots"
-  = f.text_area :fav_spots
-  = f.label "Favorite Places"
-  = f.text_area :fav_places
-  = f.label "Guilty Pleasure"
-  = f.text_area :guilty_pleasure
-  = f.label :link
-  = f.text_field :link
-  = f.text_area :quip
-  = f.submit
+%form.form-inline
+  .form-group
+    = form_for @profile do |f|
+      = f.select :industry, options_for_select(["Tech", "Analytics", "Design", "Web Development", "Digital Media", "Gaming", "IT Support", "Mobile Development", "Telecoms"]), class: 'form-control'
+      = f.text_field :occupation, placeholder: "What's your job?"
+      = f.text_area :why_tech, class: 'form-control', placeholder: 'What got you into tech?'
+      = f.text_area :stack, class: 'form-control', placeholder: "What's your tech stack?"
+      = f.text_area :fav_characters, class: 'form-control', placeholder: 'Any favorite characters from books, tv, comics, games or other media?'
+      = f.text_area :fav_spots, class: 'form-control', placeholder: 'Name some of your local haunts.'
+      = f.text_area :fav_places, class: 'form-control', placeholder: 'Your favorite places, in this or any other dimension'
+      = f.text_area :guilty_pleasure, class: 'form-control', placeholder: "It's like a belly-button, everybody's got one..."
+      = f.text_field :link, class: 'form-control', placeholder: "The link you're most excited to spread around the interwebs right now..."
+      = f.text_area :quip, class: 'form-control', placeholder: 'Give us a quote, quoth the raven...'
+      = f.submit class: 'btn btn-success'
 
 
   
