--- a/stacksy/app/views/profiles/edit.html.haml
+++ b/stacksy/app/views/profiles/edit.html.haml
@@ -1,18 +1,20 @@
 %h2 Edit Your Profile
 %form.form-inline
-  .form-group
-    = form_for @profile do |f|
-      = f.select :industry, options_for_select(["Tech", "Analytics", "Design", "Web Development", "Digital Media", "Gaming", "IT Support", "Mobile Development", "Telecoms"]), class: 'form-control'
-      = f.text_field :occupation, placeholder: "What's your job?"
-      = f.text_area :why_tech, class: 'form-control', placeholder: 'What got you into tech?'
-      = f.text_area :stack, class: 'form-control', placeholder: "What's your tech stack?"
-      = f.text_area :fav_characters, class: 'form-control', placeholder: 'Any favorite characters from books, tv, comics, games or other media?'
-      = f.text_area :fav_spots, class: 'form-control', placeholder: 'Name some of your local haunts.'
-      = f.text_area :fav_places, class: 'form-control', placeholder: 'Your favorite places, in this or any other dimension'
-      = f.text_area :guilty_pleasure, class: 'form-control', placeholder: "It's like a belly-button, everybody's got one..."
-      = f.text_field :link, class: 'form-control', placeholder: "The link you're most excited to spread around the interwebs right now..."
-      = f.text_area :quip, class: 'form-control', placeholder: 'Give us a quote, quoth the raven...'
-      = f.submit class: 'btn btn-success'
+  = form_for @profile do |f|
+    = f.select :industry, options_for_select(["Tech", "Analytics", "Design", "Web Development", "Digital Media", "Gaming", "IT Support", "Mobile Development", "Telecoms"]), class: 'form-control'
+    = f.text_field :occupation, placeholder: "What's your job?", class: 'form-control'
+    %br
+    = f.text_area :why_tech, class: 'form-control', placeholder: 'What got you into tech?', rows: '5', rows: '5'
+    = f.text_area :stack, class: 'form-control', placeholder: "What's your stack?", rows: '5'
+    = f.text_area :fav_characters, class: 'form-control', placeholder: 'Any favorite characters from books, TV, comics, films, music, games or other media?', rows: '5'
+    = f.text_area :fav_spots, class: 'form-control', placeholder: 'Name some of your local haunts.', rows: '5'
+    = f.text_area :fav_places, class: 'form-control', placeholder: 'Name some of your favorite places, in this or any other dimension.', rows: '5'
+    = f.text_area :guilty_pleasure, class: 'form-control', placeholder: "Guilty pleasures are like belly-buttons, everybody's got one...", rows: '5'
+    .col-md-6
+      = f.text_field :quip, class: 'form-control', placeholder: "Status update? (Like Facebook...)", size: '60'
+    .col-md-6
+      = f.text_field :link, class: 'form-control', placeholder: "Link du jour", rows: '5', size: '60'
+    = f.submit class: 'btn btn-success'
 
 
   
