Add 'Other' to list of industries to choose from in profile edit view.

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -57,5 +57,5 @@
               = link_to 'Tracker', tracker_index_path(current_user), class: 'btn btn-butter'
             %li#menu_item_tracked
               = link_to 'Tracked', tracked_index_path(current_user), class: 'btn btn-butter'
-            %li#menu_item_blocks
-              = link_to 'Blocks', user_blocks_path(current_user), class: 'btn btn-butter'
+            / %li#menu_item_blocks
+            /   = link_to 'Blocks', user_blocks_path(current_user), class: 'btn btn-butter'
