--- a/stacksy/app/views/profiles/edit.html.haml
+++ b/stacksy/app/views/profiles/edit.html.haml
@@ -1,7 +1,7 @@
 %h2 Update Your Profile
 .form-inline
   = form_for ([@user, @profile]) do |f|
-    = f.select :industry, options_for_select(["Tech", "Analytics", "Design", "Web Development", "Digital Media", "Gaming", "IT Support", "Mobile Development", "Telecoms"]), class: 'form-control'
+    = f.select :industry, options_for_select(["Tech", "Analytics", "Design", "Web Development", "Digital Media", "Gaming", "IT Support", "Mobile Development", "Telecoms", "Other"]), class: 'form-control'
     = f.text_field :occupation, placeholder: "What's your job?", class: 'form-control'
     %br
     = f.text_area :why_tech, class: 'form-control', placeholder: 'What got you into tech?', rows: '5', rows: '5'
