Make single tracks index view, add route and link on sidebar.

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -54,8 +54,6 @@
                   %span.badge.pull-right
                     = current_user.unviewed_pings.count
             %li#menu_item_tracker
-              = link_to 'Tracker', tracker_index_path(current_user), class: 'btn btn-butter'
-            %li#menu_item_tracked
-              = link_to 'Tracked', tracked_index_path(current_user), class: 'btn btn-butter'
+              = link_to 'Tracks', user_tracks_path(current_user), class: 'btn btn-butter'
             / %li#menu_item_blocks
             /   = link_to 'Blocks', user_blocks_path(current_user), class: 'btn btn-butter'
