--- a/stacksy/app/views/tracks/_tracks.html.haml
+++ b/stacksy/app/views/tracks/_tracks.html.haml
@@ -1,5 +1,6 @@
 - tracks.each do |track|
-  = image_tag(track.tracker.profile.image_1)
+  = image_tag(track.tracker.profile.image_1, class: 'circular_large')
+  %br
   = link_to track.tracker.name, profile_path(track.tracker)
   %br
   %p
