--- a/stacksy/app/views/tracks/index.html.haml
+++ b/stacksy/app/views/tracks/index.html.haml
@@ -1,15 +1,17 @@
 .row
   .col-md-6
-    %h3 Who you lookin' at.
-    = render partial: 'tracks', locals: {tracks: @sent_tracks}
+    %h2 Who you lookin' at.
+    .tracks-container.text-left
+      = render partial: 'tracks', locals: {tracks: @sent_tracks}
   .col-md-6
-    %h3 Who's lookin' at you, kid?
+    %h2 Who's lookin' at you, kid?
     - if current_user.role? :basic
       %br
       %br
       %h2
         %em Hmmm... upgrade?
     - else
-      = render partial: 'tracks', locals: {tracks: @received_tracks}
+      .tracks-container.text-left
+        = render partial: 'tracks', locals: {tracks: @received_tracks}
 
       
