Add tech ad image and make changes for tracks index.

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -57,3 +57,7 @@
               = link_to 'Tracks', user_tracks_path(current_user), class: 'btn btn-butter'
             / %li#menu_item_blocks
             /   = link_to 'Blocks', user_blocks_path(current_user), class: 'btn btn-butter'
+          %br
+          %br
+          %br
+          = image_tag('tech_ad.gif')
