Fixed error with sign up form because of nil address field

--- a/stacksy/app/views/users/_gender_zipcode.html.haml
+++ b/stacksy/app/views/users/_gender_zipcode.html.haml
@@ -12,5 +12,7 @@
     %br
     %h2 Postal Code
     = f.text_field :zipcode
+    %h2 Location
+    = f.text_field :location, placeholder: "E.g., City, Country"
     #sign-up-submit
       = f.submit class: "btn btn-success btn-large"
