--- a/stacksy/app/views/pings/index.html.haml
+++ b/stacksy/app/views/pings/index.html.haml
@@ -7,7 +7,13 @@
         = render partial: 'ping', locals:{ping: ping, person: ping.pinger}
   .col-md-6
     %h2 Sent Pings
-    .pings-container.text-left
-      -@sent_pings.each do |ping|
-        = render partial: 'ping', locals: {pings: ping, person: ping.pinged}
+    -if current_user.role? :basic
+      %br
+      %br
+      %h2
+        %em Hmmm... upgrade?
+    -else
+      .pings-container.text-left
+        -@sent_pings.each do |ping|
+          = render partial: 'ping', locals: {pings: ping, person: ping.pinged}
 
