--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -17,6 +17,16 @@ a:hover {
   text-decoration: none;
 }
 
+img {
+    opacity: 1.0;
+    filter: alpha(opacity=100);
+}
+
+img:hover {
+    opacity: 0.5;
+    filter: alpha(opacity=40);
+}
+
 .btn {
   text-align: left;
 }
@@ -39,7 +49,8 @@ body > .container-fluid > .row > .col-md-2, body > .container-fluid > .row > .co
 }
 
 body > .container-fluid > .row > .col-md-2 {
-  background-color: #C2DDFF;
+  background-color: #5bc0de;
+  
 }
 
 header{
@@ -132,7 +143,8 @@ h3, #js-alert, .alert, .notice {
 }
 
 svg {
-  fill: #AF6200;
+  fill: #fff;
+
 }
 
 .special {
@@ -193,9 +205,7 @@ td.message-box {
 }
 
 .btn-search-submit{
-  width: 65%;
-  background-color: #4073FF;
-  background-image: linear-gradient(#2badf3, #2492db);
+  width: 35%;
   color: #fff;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.18),inset 0 0 1px 1px rgba(255,255,255,0.09);
@@ -209,7 +219,7 @@ td.message-box {
 label{
   font-family: "HelveticaNeue-Light", Helvetica;
   color: #f0ad4e;
-  font-size: 15px;
+  font-size: 18px;
 }
 
 .search-results{
@@ -222,14 +232,6 @@ label{
   margin-bottom: 20px;
 }
 
-.search-profile-circles img{
-    opacity: .8;
-    transition: all .3s ease-in-out;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    -ms-transition: all .3s ease-in-out
-  }
 
 .small-index-div-tracks{
   width: 15%;
@@ -252,4 +254,34 @@ h3.panel-title {
 
 .quip {
   font-style: italic;
+}
+
+.special{
+  position: absolute;
+  bottom: 0;
+}
+
+#membership-line{
+  font-family: "HelveticaNeue-Light", Helvetica;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.sidebar-user-info{
+  font-family: Helvetica;
+  text-align: center;
+
+}
+
+.sidebar-sub-user-info a{
+  color:#FFDE00;
+}
+
+.sidebar-sub-user-info{
+  font-size: .7em;
+  color: white;
+}
+
+.home_page_user_photo img :hover{
+  opacity: 100%;
 }
