--- a/stacksy/app/views/users/search.html.haml
+++ b/stacksy/app/views/users/search.html.haml
@@ -15,7 +15,7 @@
     = f.label "Distance From You"
     = f.number_field :distance
     %br
-    = f.submit "Git", :class => "btn btn-lg btn-search-submit"
+    = f.submit "Git", :class => "btn btn-info btn-lg btn-search-submit"
 
 %body
   .search-results
