--- a/stacksy/app/views/profiles/show.html.haml
+++ b/stacksy/app/views/profiles/show.html.haml
@@ -32,7 +32,7 @@
       %h4
         = @user.location 
       %h4
-        = "#{@user.gender.title.capitalize}, #{@user.age}"
+        = "#{@user.gender.title}, #{@user.age}"
       .quip
         = @profile.try(:quip)
       - if @user.gender_interests.any?
@@ -41,7 +41,7 @@
           - if @user.gender_interests.any?
             - array = []
             -@user.gender_interests.map do |gender| 
-              - array << gender.title.capitalize
+              - array << gender.title
             = array.join(", ")
       %br
       %br 
