--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Pacifico"
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Libre+Baskerville:400italic"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Open+Sans:400,300,700"
     = javascript_include_tag "application"
     %script{src: "http://code.jquery.com/ui/1.10.3/jquery-ui.js"}
     = csrf_meta_tags
@@ -14,7 +15,7 @@
     .container-fluid
       .row
         .col-md-2        
-          = raw(stacksy_logo(large_dimensions)) 
+          = raw(stacksy_logo(large_dimensions))
           %p.special
             Pancake designed by Jacob Halton from
             %a{href: "http://www.thenounproject.com", target: "_blank"} the Noun Project collection.
@@ -33,29 +34,29 @@
               %h3.sidebar-user-info
                 = link_to image_tag(current_user.profile.image_1, class: "circular_large home_page_user_photo"), profile_path(current_user)
                 %br
-                %b= link_to current_user.name, profile_path(current_user), :class => "sidebar-sub-user-name"
+                = link_to current_user.name, profile_path(current_user), :id => "sidebar-sub-user-name"
                 %br
-                = link_to "Membership", user_membership_path(current_user), :class => "sidebar-sub-user-info"
+                = link_to "MEMBERSHIP", user_membership_path(current_user), :class => "sidebar-sub-user-info"
                 %br
-                = link_to "Log Out", destroy_user_session_path, method: :delete, :class => "sidebar-sub-user-info"
-            %li#menu_item_home
-              = link_to 'Home', home_page_based_on_role, class: 'btn btn-butter'
-            %li#menu_item_search
-              = link_to 'Search', user_search_path(current_user), class: 'btn btn-butter'
-            %li#menu_item_messages
-              = link_to(user_messages_path(current_user), class: 'btn btn-butter') do
-                Messages
+                = link_to "LOG OUT", destroy_user_session_path, method: :delete, :class => "sidebar-sub-user-info"
+            %li.menu_item
+              = link_to 'HOME', home_page_based_on_role, class: 'menu-button'
+            %li.menu_item
+              = link_to 'SEARCH', user_search_path(current_user), class: 'menu-button'
+            %li.menu_item
+              = link_to(user_messages_path(current_user), class: 'menu-button') do
+                MESSAGES
                 - if current_user.unviewed_messages.any?
                   %span.badge.pull-right
                     = current_user.unviewed_messages.count
-            %li#menu_item_pings
-              = link_to(user_pings_path(current_user), class: 'btn btn-butter') do
-                Pings
+            %li.menu_item
+              = link_to(user_pings_path(current_user), class: 'menu-button') do
+                PINGS
                 - if current_user.unviewed_pings.any?
                   %span.badge.pull-right
                     = current_user.unviewed_pings.count
-            %li#menu_item_tracker
-              = link_to 'Tracks', user_tracks_path(current_user), class: 'btn btn-butter'
+            %li.menu_item
+              = link_to 'TRACKS', user_tracks_path(current_user), class: 'menu-button'
             / %li#menu_item_blocks
             /   = link_to 'Blocks', user_blocks_path(current_user), class: 'btn btn-butter'
           %br
