Fix membership form.

--- a/stacksy/app/views/users/membership.html.haml
+++ b/stacksy/app/views/users/membership.html.haml
@@ -11,7 +11,7 @@
       = f.radio_button(:role, "basic")
       = f.label("Premium")
       = f.radio_button(:role, "paid")
-      = f.submit("Ok") class: "btn btn-warning"
+      = f.submit("Ok", class: 'btn btn-warning')
 
 
 
