--- a/stacksy/app/views/profiles/show.html.haml
+++ b/stacksy/app/views/profiles/show.html.haml
@@ -5,18 +5,19 @@
         = image_tag(image, class: 'circular_large')
     %br
     %br
-    .ping-button       
-      = link_to "Ping", create_ping_path(pinged_id: @user.id), method: :post, remote: true, class: 'btn btn-warning'
-    .message-button
-      = link_to "Message", 'javascript:;', class: 'btn btn-success'
-      // Message button made a link so as to be sized similarly to ping button.
-    .message-box
-      = form_tag create_message_path(recipient_id: @user.id), remote: true do
-        = fields_for :message do |i|
+    - if current_user != @user
+      .ping-button       
+        = link_to "Ping", create_ping_path(pinged_id: @user.id), method: :post, remote: true, class: 'btn btn-warning'
+      .message-button
+        = link_to "Message", 'javascript:;', class: 'btn btn-success'
+        // Message button made a link so as to be sized similarly to ping button.
+      .message-box
+        = form_tag create_message_path(recipient_id: @user.id), remote: true do
+          = fields_for :message do |i|
+            %br
+            = i.text_area :content, cols: '50', rows: '5'
           %br
-          = i.text_area :content, cols: '50', rows: '5'
-        %br
-        = submit_tag "Send", class: 'send-button btn btn-success'
+          = submit_tag "Send", class: 'send-button btn btn-success'
   .col-md-1
 
   .col-md-6.text-left
