Revise search function to reflect deletion of 'distance' from User model.

--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -13,7 +13,7 @@
     #slider
     %br
     = f.label "Distance From You"
-    = f.number_field :distance
+    = number_field_tag :distance
     %br
     = f.submit "Git", :class => "btn btn-info btn-lg btn-search-submit"
 
